[gd_scene load_steps=5 format=3 uid="uid://j8fcajpsjh16"]

[ext_resource type="PackedScene" uid="uid://m55l6q22eoei" path="res://node_2d.tscn" id="1_f3g77"]
[ext_resource type="Script" path="res://MainSceneMan.gd" id="1_tm8nq"]
[ext_resource type="PackedScene" uid="uid://c5blmmuuioyei" path="res://mob.tscn" id="2_3ch0i"]

[sub_resource type="Curve2D" id="Curve2D_wjvh3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -240, -450, 0, 0, 0, 0, 240, -450, 0, 0, 0, 0, 248, 318, 0, 0, 0, 0, -128, 302, 0, 0, 0, 0, -272, 302, 0, 0, 0, 0, -240, -450)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_tm8nq")
mob_scene = ExtResource("2_3ch0i")

[node name="PlayerNode" parent="." instance=ExtResource("1_f3g77")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(240, 450)
curve = SubResource("Curve2D_wjvh3")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-240, -450)

[connection signal="hit" from="PlayerNode" to="." method="GameOver"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
